# filesync

./: CMakeLists.txt  README.org
src/: CMakeLists.txt  cmdparser.c  cmdparser.h  confparser.c  confparser.h  filesyncd  logging.c  logging.h  main.c  notify.c  notify.h  rsync_proxy.c  rsync_proxy.h  utils.c  utils.h  watch_session.c  watch_session.h  watcher.c  watcher.h
test/: CMakeLists.txt  cmdparser_test.c  logging_test.c  notify_test.c  rsync_proxy_test.c  test_utils.h
